todo-project/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-project
  template:
    metadata:
      labels:
        app: todo-project
    spec:
      volumes:
        - name: next-cache
          emptyDir: {}
        - name: data-volume
          persistentVolumeClaim:
            claimName: todo-project-data-pvc
      containers:
        - name: frontend
          image: 3nd3r1/todo-project-frontend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: next-cache
              mountPath: /usr/src/app/.next/cache
        - name: backend
          image: 3nd3r1/todo-project-backend:latest
          ports:
            - containerPort: 8080
        - name: imagenator
          image: 3nd3r1/todo-project-imagenator:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data-volume
              mountPath: /usr/src/app/data
