todo-project/manifests/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-project-database-stset
  namespace: project
spec:
  serviceName: todo-project-database-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-project-database
  template:
    metadata:
      labels:
        app: todo-project-database
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: todo-project-database-pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: todo-project-database-pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
