todo-project/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-project-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-project
  ports:
    - name: backend
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: imagenator
      protocol: TCP
      port: 5000
      targetPort: 5000
