todo-project/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-project-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-project-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-project-svc
                port:
                  number: 3000
          - path: /imagenator
            pathType: Prefix
            backend:
              service:
                name: todo-project-svc
                port:
                  number: 5000
